gcc/testsuite/rust/rustc/ui/parser/issues/issue-100197-mut-let_dg.rs
//@ run-rustfix

fn main() {
    mut let _x = 123;
// { dg-error "" "" { target *-*-* } .-1 }
}

